update board, add thomas eck, move dan to emeritus

--- a/index.html
+++ b/index.html
@@ -384,37 +384,45 @@
                 <div class="card-header">
                   <img
                     class="card-img"
-                    src="img/dan-brennan.jpg"
-                    alt="Daniel Brennan's Headshot"
+                    src="img/thomas-eck.jpeg"
+                    alt="Thomas Eck's Headshot"
                   />
-                  <h5 class="text-center">Daniel Brennan</h5>
+                  <h5 class="text-center">Thomas Eck</h5>
                 </div>
                 <!-- /card-header-->
                 <div class="card-content">
                   <p>
-                    Dan Brennan has over 20 years of experience in the
-                    pharmaceutical industry in various roles of progressive
-                    leadership within Operations, US and Global Sales and
-                    Marketing, and New Product Development. He is currently the
-                    Chief Commercial Officer of Catalyst Pharmaceuticals in
-                    Coral Gables, FL, developing and commercializing innovative
-                    medicines for rare neuromuscular diseases. Prior to his
-                    pharmaceutical experience, he worked in human resources
-                    management in a manufacturing setting and social work with
-                    sexually and physically abused inner-city children in
-                    Chicago.
+                    Thomas Eck, CFA lives in Whitefish Bay, Wisconsin and is a
+                    Managing Director at Silvercrest Asset Management. He joined
+                    Silvercrest in 2019 as a result of Silvercrest's acquisition
+                    of Cortina Asset Management, where he was a founding
+                    principal. He has more than 20 years experience in the
+                    investment industry. Mr. Eck entered the investment industry
+                    when he joined the State of Wisconsin Investment Board in
+                    1997. He has worked with Strong Capital Management and US
+                    Bancorp Asset Management prior to founding Cortina with
+                    three partners. He holds the Chartered Financial Analyst
+                    designation and is a member of the CFA Institute. Managing
+                    small cap stock portfolios for 24 years and building a small
+                    business from scratch has instilled in Mr. Eck the value of
+                    organizational structure, financial discipline and focus on
+                    competitive advantage.
                   </p>
                   <p>
-                    Mr. Brennan has served as a volunteer on a number of
-                    non-profit boards, including the Huntington’s Disease
-                    Society of America (current), Court Appointed Special
-                    Advocates (CASA) of Lake County IL, the Alzheimer’s
-                    Association of Central Indiana, Fairbanks Hospital Addiction
-                    Treatment Center, and the Eli Lilly Credit Union. He
-                    received a B.A. degree in Psychology from the University of
-                    Notre Dame and an MBA degree, with distinction, from the
-                    Kellogg Graduate School of Business at Northwestern
-                    University in Evanston, Illinois.
+                    Outside of work, Mr. Eck has been deeply involved in
+                    supporting Catholic Education. He has chaired fund raising
+                    efforts at Dominican High School and served on the school
+                    board and finance councils at St Monica parish and grade
+                    school, both in Whitefish Bay, WI. He has also served on the
+                    advisory board of the Marquette University Applied
+                    Investment program mentoring aspiring investors. Mr. Eck
+                    received a B.B.A. from the University of Notre Dame and an
+                    M.B.A from Marquette University.
+                  </p>
+                  <p>
+                    Tom and his wife, Carrie, have four children. In his spare
+                    time, Tom enjoys spending time with his friends and family,
+                    reading, playing golf and water skiing.
                   </p>
                 </div>
                 <!-- /card-content -->
@@ -450,6 +458,42 @@
             <!-- /card -->
           </div>
           <!-- /card-grid -->
+
+          <div class="card mx-auto">
+            <div class="card-body">
+              <div class="card-header">
+                <img
+                  class="card-img"
+                  src="img/dan-brennan.jpg"
+                  alt="Daniel Brennan's Headshot"
+                />
+                <h5 class="text-center">Daniel Brennan</h5>
+                <h6>EMERITUS CAMPEON</h6>
+              </div>
+              <!-- /card-header-->
+              <div class="card-content">
+                <p>
+                  Dan Brennan has over 20 years of experience in the
+                  pharmaceutical industry in various roles of progressive
+                  leadership within Operations, US and Global Sales and
+                  Marketing, and New Product Development. He is currently the
+                  Chief Commercial Officer of Catalyst Pharmaceuticals in Coral
+                  Gables, FL, developing and commercializing innovative
+                  medicines for rare neuromuscular diseases. Prior to his
+                  pharmaceutical experience, he worked in human resources
+                  management in a manufacturing setting and social work with
+                  sexually and physically abused inner-city children in Chicago.
+                </p>
+                <p>
+                  Dan Brennan was a founding board member and actively served
+                  from 2017-2021.
+                </p>
+              </div>
+              <!-- /card-content -->
+            </div>
+            <!-- /card-body-->
+          </div>
+          <!-- card -->
         </article>
         <!-- /board -->
       </section>
