--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
               <a class="nav-link" href="#gallery">Media</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/host-a-sports-equiment-drive.html"
+                >Host A Sports Equiment Drive</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
