fix typos and style for host a drive

--- a/host-a-sports-equiment-drive.html
+++ b/host-a-sports-equiment-drive.html
@@ -88,7 +88,8 @@
       </nav>
     </header>
 
-    <main id="host-a-drive" class="container">
+    <main class="container host-a-drive">
+      <h3>Host a Sports Equipment Drive</h3>
       <p>
         <strong>
           THANK YOU SO MUCH FOR YOUR INTEREST IN HOSTING A SPORTS DRIVE !
@@ -126,13 +127,14 @@
         <li>
           <p>
             Collect the gear and box it to be shipped to Hackensack, NJ. Because
-            JCC has a limited budget and DO pay for the boxes to be shipped from
-            New Jersey to the DR (and they do so at a discount for us) yet
+            JCC has a limited budget and MUST pay for the boxes to be shipped
+            from New Jersey to the DR (and they do so at a discount for us) yet
             wishes NOT to discourage any efforts leading to an equipment
             donation, we recommend that a part of your campaign can include a
             request to your community to take a small financial collection to
-            cover the shipping. That said, if you are unable to do so, please
-            let us know via email at
+            cover the shipping from your hometown to our shipper in New Jersey.
+            That said, if you are unable to do so, please let us know via email
+            at
             <a href="mailto:juegacomocampeon@gmail.com"
               >juegacomocampeon@gmail.com</a
             >
@@ -157,14 +159,9 @@
       </p>
 
       <p>
-        Our shipper – located in Hackensack, New Jersey – does not charge us
-        based on weight, but rather on volume.
-      </p>
-
-      <p>
-        Fama Shipping <br />
-        48 Orchard Street <br />
-        Hackensack, NJ 07601
+        Please note that our shipper (Fama) does not charge JCC based on weight
+        but rather on volume (please deflate all balls if possible to maximize
+        space). Thank you so much for DONATING LIKE A CHAMPION!
       </p>
 
       <p>Thank you so much for DONATING LIKE A CHAMPION !</p>
