Adds Omar Meson

--- a/index.html
+++ b/index.html
@@ -462,7 +462,53 @@
             </div>
             <!-- /card -->
           </div>
-          <!-- /card-grid -->
+
+          <div class="card mx-auto">
+            <div class="card-body">
+              <div class="card-header">
+                <img
+                  id="card-img"
+                  class="card-img"
+                  src="img/omar-meson.jpeg"
+                  alt="Omar Meson"
+                />
+                <h5 class="text-center">Omar Meson</h5>
+              </div>
+              <!-- /card-header-->
+              <div class="card-content">
+                <p>
+                  Growing up in Cabarete, Dominican Republic, Omar exemplifies
+                  the power of education, opportunity, and perseverance in
+                  overcoming challenges and creating a meaningful impact,
+                  regardless of one's origins. Omar currently resides and works
+                  in Toronto, Canada, at R-LABS, the world's premier real estate
+                  technology-focused venture builder and investment firm. With a
+                  proven track record in the business world, Omar has honed his
+                  entrepreneurial acumen and expertise over seven years as a
+                  management consultant at KPMG. There, he advised Fortune 500
+                  clients like Walmart, Sony, and Colgate-Palmolive on strategy
+                  and innovation. Initiating his career within the vibrant and
+                  competitive management consulting environment of New York
+                  City, Omar seized the opportunity to further refine his
+                  entrepreneurial instincts when he transitioned to his current
+                  role in Toronto.
+                </p>
+                <p>
+                  Committed to uplifting the youth of the Dominican Republic,
+                  Omar passionately supports initiatives promoting sports,
+                  education, and entrepreneurship. As an advocate for empowering
+                  the next generation of Dominican leaders, he actively
+                  contributes to various projects and organizations. In his
+                  leisure time, Omar relishes traveling and immersing himself in
+                  new cultures, while also participating in a range of sports,
+                  including basketball, tennis, golf, and kitesurfing.
+                </p>
+              </div>
+              <!-- /card-content -->
+            </div>
+            <!-- /card-body-->
+          </div>
+          <!-- /card -->
 
           <div class="card mx-auto">
             <div class="card-body">
