fix: updates href values to be relative paths

--- a/donate.html
+++ b/donate.html
@@ -26,29 +26,29 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">About</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="https://www.juegacomocampeon.com/#overview">JCC Overview</a>
-              <a class="dropdown-item" href="https://www.juegacomocampeon.com/#mission">Mission</a>
-              <a class="dropdown-item" href="https://www.juegacomocampeon.com/#director">Director</a>
-              <a class="dropdown-item" href="https://www.juegacomocampeon.com/#story">Our Story</a>
-              <a class="dropdown-item" href="https://www.juegacomocampeon.com/#board">Board Members</a>
+              <a class="dropdown-item" href="/#overview">JCC Overview</a>
+              <a class="dropdown-item" href="/#mission">Mission</a>
+              <a class="dropdown-item" href="/#director">Director</a>
+              <a class="dropdown-item" href="/#story">Our Story</a>
+              <a class="dropdown-item" href="/#board">Board Members</a>
             </div>
           </li>
 
-          <li class="nav-item"><a class="nav-link" href="https://www.juegacomocampeon.com/#our-program">Program</a></li>
+          <li class="nav-item"><a class="nav-link" href="/#our-program">Program</a></li>
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">Support</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="https://www.juegacomocampeon.com/#volunteer">Volunteer</a>
-              <a class="dropdown-item" href="https://www.juegacomocampeon.com/#host-a-drive">Host a Drive</a>
-              <a class="dropdown-item" href="https://www.juegacomocampeon.com/#contribute">Contribute</a>
-              <a class="dropdown-item" href="https://www.juegacomocampeon.com/#sponsor">Sponsor</a>
-              <a class="dropdown-item" href="https://www.juegacomocampeon.com/#employment">Jobs</a>
+              <a class="dropdown-item" href="/#volunteer">Volunteer</a>
+              <a class="dropdown-item" href="/#host-a-drive">Host a Drive</a>
+              <a class="dropdown-item" href="/#contribute">Contribute</a>
+              <a class="dropdown-item" href="/#sponsor">Sponsor</a>
+              <a class="dropdown-item" href="/#employment">Jobs</a>
             </div>
           </li>
           
-          <li class="nav-item"><a class="nav-link" href="https://www.juegacomocampeon.com/#gallery">Media</a></li>
-          <li class="nav-item"><a class="nav-link" href="https://www.juegacomocampeon.com/#contact">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="/#gallery">Media</a></li>
+          <li class="nav-item"><a class="nav-link" href="/#contact">Contact</a></li>
 
         </ul>  <!-- navbar -->
 
