feat: :art: add function to send the user to donate page

--- a/donate.html
+++ b/donate.html
@@ -7,7 +7,6 @@
     <title>Donate | Juega Como Campeon | Non-Profit Bilingual Sports Academy</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/qgiv.css">
 </head>
 <body>
 
@@ -35,6 +34,7 @@
           </li>
 
           <li class="nav-item"><a class="nav-link" href="https://www.juegacomocampeon.com/#our-program">Program</a></li>
+          <li class="nav-item"><a class="nav-link" href="campaign.html">Campaign</a></li>
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">Support</a>
@@ -65,19 +65,6 @@
     <div class="qgiv-embed-container" data-qgiv-embed="true" data-embed-id="52895" data-embed="https://secure.qgiv.com/for/juecomcamin/embed/52895/" data-width="564"></div>
   </div>
 
-  <script>
-
-    (function(w, d, s, id){
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s);
-        js.id = id;
-        js.src = "https://secure.qgiv.com/resources/core/js/embed.js";
-        fjs.parentNode.insertBefore(js, fjs);
-    })
-    (window, document, 'script', 'qgiv-embedjs');
-
-  </script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
