--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#campaign">Campaign</a>
+              <a class="nav-link" href="campaign.html">Campaign</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -676,346 +676,6 @@
         </article>
       </section>
       <!-- /Support -->
-
-
-      <!-- GRID CAMPAIGN -->
-
-      <section id="campaign" class="campaign text-justify">
-        <h1 class="py-3">CAMPAIGN</h1>
-        <hr />
-        <article>
-          <h3 id="contribute">What this about</h3>
-          <p>
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias error minima mollitia, dicta sequi consectetur quaerat eaque provident. Assumenda dolores dolorum earum beatae quod. Placeat voluptas quos ad. Corporis, aspernatur
-          </p>
-        </article>
-
-        <h3 id="grid-title">GRID SPORTS</h3>
-        <article class="grid-container">
-
-          <a href="donate.html" class="grid" id="grid">
-            <div class="grid-item americanball">
-              <div class="item-price">$10</div>
-            </div>
-            <div class="grid-item americanball">
-              <div class="item-price">$10</div>
-            </div>
-            <div class="grid-item americanball">
-              <div class="item-price">$10</div>
-            </div>
-            <div class="grid-item americanball">
-              <div class="item-price">$10</div>
-            </div>
-            <div class="grid-item americanball">
-              <div class="item-price">$10</div>
-            </div>
-            <div class="grid-item americanball">
-              <div class="item-price">$10</div>
-            </div>
-            <div class="grid-item americanball">
-              <div class="item-price">$10</div>
-            </div>
-            <div class="grid-item americanball">
-              <div class="item-price">$10</div>
-            </div>
-            <div class="grid-item americanball">
-              <div class="item-price">$10</div>
-            </div>
-            <div class="grid-item americanball">
-              <div class="item-price">$10</div>
-            </div>
-          </a>
-
-          <div class="grid">
-            <div class="grid-item tennis">
-              <div class="item-price">$20</div>
-            </div>
-            <div class="grid-item tennis">
-              <div class="item-price">$20</div>
-            </div>
-            <div class="grid-item tennis">
-              <div class="item-price">$20</div>
-            </div>
-            <div class="grid-item tennis">
-              <div class="item-price">$20</div>
-            </div>
-            <div class="grid-item tennis">
-              <div class="item-price">$20</div>
-            </div>
-            <div class="grid-item tennis">
-              <div class="item-price">$20</div>
-            </div>
-            <div class="grid-item tennis">
-              <div class="item-price">$20</div>
-            </div>
-            <div class="grid-item tennis">
-              <div class="item-price">$20</div>
-            </div>
-            <div class="grid-item tennis">
-              <div class="item-price">$20</div>
-            </div>
-            <div class="grid-item tennis">
-              <div class="item-price">$20</div>
-            </div>
-          </div>
-          <div class="grid">
-            <div class="grid-item football">
-              <div class="item-price">$30</div>
-            </div>
-            <div class="grid-item football">
-              <div class="item-price">$30</div>
-            </div>
-            <div class="grid-item football">
-              <div class="item-price">$30</div>
-            </div>
-            <div class="grid-item football">
-              <div class="item-price">$30</div>
-            </div>
-            <div class="grid-item football">
-              <div class="item-price">$30</div>
-            </div>
-            <div class="grid-item football">
-              <div class="item-price">$30</div>
-            </div>
-            <div class="grid-item football">
-              <div class="item-price">$30</div>
-            </div>
-            <div class="grid-item football">
-              <div class="item-price">$30</div>
-            </div>
-            <div class="grid-item football">
-              <div class="item-price">$30</div>
-            </div>
-            <div class="grid-item football">
-              <div class="item-price">$30</div>
-            </div>
-          </div>
-          <div class="grid">
-            <div class="grid-item basketball">
-              <div class="item-price">$40</div>
-            </div>
-            <div class="grid-item basketball">
-              <div class="item-price">$40</div>
-            </div>
-            <div class="grid-item basketball">
-              <div class="item-price">$40</div>
-            </div>
-            <div class="grid-item basketball">
-              <div class="item-price">$40</div>
-            </div>
-            <div class="grid-item basketball">
-              <div class="item-price">$40</div>
-            </div>
-            <div class="grid-item basketball">
-              <div class="item-price">$40</div>
-            </div>
-            <div class="grid-item basketball">
-              <div class="item-price">$40</div>
-            </div>
-            <div class="grid-item basketball">
-              <div class="item-price">$40</div>
-            </div>
-            <div class="grid-item basketball">
-              <div class="item-price">$40</div>
-            </div>
-            <div class="grid-item basketball ">
-              <div class="item-price">$40</div>
-            </div>
-          </div>
-          <div class="grid">
-            <div class="grid-item golf">
-              <div class="item-price">$50</div>
-            </div>
-            <div class="grid-item golf">
-              <div class="item-price">$50</div>
-            </div>
-            <div class="grid-item golf">
-              <div class="item-price">$50</div>
-            </div>
-            <div class="grid-item golf">
-              <div class="item-price">$50</div>
-            </div>
-            <div class="grid-item golf">
-              <div class="item-price">$50</div>
-            </div>
-            <div class="grid-item golf">
-              <div class="item-price">$50</div>
-            </div>
-            <div class="grid-item golf">
-              <div class="item-price">$50</div>
-            </div>
-            <div class="grid-item golf">
-              <div class="item-price">$50</div>
-            </div>
-            <div class="grid-item golf">
-              <div class="item-price">$50</div>
-            </div>
-            <div class="grid-item golf">
-              <div class="item-price">$50</div>
-            </div>
-          </div>
-          <div class="grid">
-            <div class="grid-item americanball">
-              <div class="item-price">$60</div>
-            </div>
-            <div class="grid-item americanball">
-              <div class="item-price">$60</div>
-            </div>
-            <div class="grid-item americanball">
-              <div class="item-price">$60</div>
-            </div>
-            <div class="grid-item americanball">
-              <div class="item-price">$60</div>
-            </div>
-            <div class="grid-item americanball">
-              <div class="item-price">$60</div>
-            </div>
-            <div class="grid-item americanball">
-              <div class="item-price">$60</div>
-            </div>
-            <div class="grid-item americanball">
-              <div class="item-price">$60</div>
-            </div>
-            <div class="grid-item americanball">
-              <div class="item-price">$60</div>
-            </div>
-            <div class="grid-item americanball">
-              <div class="item-price">$60</div>
-            </div>
-            <div class="grid-item americanball">
-              <div class="item-price">$60</div>
-            </div>
-          </div>
-          <div class="grid">
-            <div class="grid-item tennis">
-              <div class="item-price">$70</div>
-            </div>
-            <div class="grid-item tennis">
-              <div class="item-price">$70</div>
-            </div>
-            <div class="grid-item tennis">
-              <div class="item-price">$70</div>
-            </div>
-            <div class="grid-item tennis">
-              <div class="item-price">$70</div>
-            </div>
-            <div class="grid-item tennis">
-              <div class="item-price">$70</div>
-            </div>
-            <div class="grid-item tennis">
-              <div class="item-price">$70</div>
-            </div>
-            <div class="grid-item tennis">
-              <div class="item-price">$70</div>
-            </div>
-            <div class="grid-item tennis">
-              <div class="item-price">$70</div>
-            </div>
-            <div class="grid-item tennis">
-              <div class="item-price">$70</div>
-            </div>
-            <div class="grid-item tennis">
-              <div class="item-price">$70</div>
-            </div>
-          </div>
-          <div class="grid">
-            <div class="grid-item football">
-              <div class="item-price">$80</div>
-            </div>
-            <div class="grid-item football">
-              <div class="item-price">$80</div>
-            </div>
-            <div class="grid-item football">
-              <div class="item-price">$80</div>
-            </div>
-            <div class="grid-item football">
-              <div class="item-price">$80</div>
-            </div>
-            <div class="grid-item football">
-              <div class="item-price">$80</div>
-            </div>
-            <div class="grid-item football">
-              <div class="item-price">$80</div>
-            </div>
-            <div class="grid-item football">
-              <div class="item-price">$80</div>
-            </div>
-            <div class="grid-item football">
-              <div class="item-price">$80</div>
-            </div>
-            <div class="grid-item football">
-              <div class="item-price">$80</div>
-            </div>
-            <div class="grid-item football">
-              <div class="item-price">$80</div>
-            </div>
-          </div>
-          <div class="grid">
-            <div class="grid-item basketball">
-              <div class="item-price">$90</div>
-            </div>
-            <div class="grid-item basketball">
-              <div class="item-price">$90</div>
-            </div>
-            <div class="grid-item basketball">
-              <div class="item-price">$90</div>
-            </div>
-            <div class="grid-item basketball">
-              <div class="item-price">$90</div>
-            </div>
-            <div class="grid-item basketball">
-              <div class="item-price">$90</div>
-            </div>
-            <div class="grid-item basketball">
-              <div class="item-price">$90</div>
-            </div>
-            <div class="grid-item basketball">
-              <div class="item-price">$90</div>
-            </div>
-            <div class="grid-item basketball">
-              <div class="item-price">$90</div>
-            </div>
-            <div class="grid-item basketball">
-              <div class="item-price">$90</div>
-            </div>
-            <div class="grid-item basketball">
-              <div class="item-price">$90</div>
-            </div>
-          </div>
-          <div class="grid">
-            <div class="grid-item golf">
-              <div class="item-price">$100</div>
-            </div>
-            <div class="grid-item golf">
-              <div class="item-price">$100</div>
-            </div>
-            <div class="grid-item golf">
-              <div class="item-price">$100</div>
-            </div>
-            <div class="grid-item golf">
-              <div class="item-price">$100</div>
-            </div>
-            <div class="grid-item golf">
-              <div class="item-price">$100</div>
-            </div>
-            <div class="grid-item golf">
-              <div class="item-price">$100</div>
-            </div>
-            <div class="grid-item golf">
-              <div class="item-price">$100</div>
-            </div>
-            <div class="grid-item golf">
-              <div class="item-price">$100</div>
-            </div>
-            <div class="grid-item golf">
-              <div class="item-price">$100</div>
-            </div>
-            <div class="grid-item golf">
-              <div class="item-price">$100</div>
-            </div>
-          </div>
-        </article>
-      </section>
 
       <section id="gallery" class="gallery">
         <h1 class="py-3">Media</h1>
