style: :art: change background color and put price div lower

--- a/campaign.html
+++ b/campaign.html
@@ -212,11 +212,17 @@
         </div>
       </div>
       <div class="grid">
-        <div class="grid-item golf " data-price="50">
+        <div class="grid-item golf grayout" data-price="50">
           <div class="item-price">$50</div>
+          <div class="tool">
+            <div class="toolttext">CHRIS TRAVERS</div>
         </div>
-        <div class="grid-item golf " data-price="50">
+        </div>
+        <div class="grid-item golf grayout" data-price="50">
           <div class="item-price">$50</div>
+          <div class="tool">
+            <div class="toolttext">ROMANTIEZER RODRIGUEZ</div>
+        </div>
         </div>
         <div class="grid-item golf" data-price="50">
           <div class="item-price">$50</div>
