style: :art: add more text on popup

--- a/campaign.html
+++ b/campaign.html
@@ -471,9 +471,11 @@
 
                     popupMessage.innerHTML =
                         `<br>You have clicked on a ball priced at $${price}. Do you wish to buy it? <br><br>
-                         <b>PLEASE NOTE !</b> <br>
-                         <br>1. You need to enter the price of the ball you selected where it says '$0'.
-                         <br>2. Click on 'Give' and fill in your details to make the donation.`;
+                        <b>PLEASE NOTE !</b> <br>
+                        <br>1. You need to enter the price of the ball you selected where it says '$0'.
+                        <br>2. Click on 'Give' and fill in your details to make the donation.
+                        <br><br><b>IMPORTANT!</b><br>
+                        Your name will be displayed on the ball within an estimated 24 hours after the purchase.`;
 
                     okButton.style.display = 'block';
                     openPopup();
