style: :art: add image on description

--- a/campaign.html
+++ b/campaign.html
@@ -95,6 +95,11 @@
                     <br>
                     Join us and be part of the positive change in these children's lives in the Dominican Republic! Your
                     donation makes a difference!
+                    <br>
+                    <br>
+                    <div style="width: 100%; display: flex; justify-content: center;">
+                    <img src="img/picture gallery 10.png" style="width: 50%; border: 3px gray solid;" alt="Bilingual Sports Academy">
+                    </div>
                 </p>
             </article>
 
