style: update grid h3

--- a/campaign.html
+++ b/campaign.html
@@ -76,7 +76,7 @@
             <h1>GRID CAMPAIGN</h1>
             <hr />
             <article>
-                <h3 id="contribute">What this about</h3>
+                <h3 id="contribute">¿What is this campaign about?</h3>
                 <p>
                     Make a difference with a click! By clicking on the ball below, you'll be making a donation to
                     support the Bilingual Sports Academy, Juega Como Campeon (JCC), and positively impact the lives of
@@ -98,7 +98,7 @@
                     <br>
                     <br>
                     <div style="width: 100%; display: flex; justify-content: center;">
-                    <img src="img/picture gallery 10.png" style="width: 50%; border: 3px gray solid;" alt="Bilingual Sports Academy">
+                    <img src="img/picture gallery 10.png" style="width: 95%; border: 3px gray solid;" alt="Bilingual Sports Academy">
                     </div>
                 </p>
             </article>
@@ -468,7 +468,7 @@
                     const name = element.getAttribute('data-name');
 
                     if (element.classList.contains('grayout')) {
-                        popupMessage.textContent = `Ya comprado por ${name}`;
+                        popupMessage.textContent = `Already purchased by ${name}`;
                         okButton.style.display = 'none';
                         openPopup();
                         return;
