--- a/campaign.html
+++ b/campaign.html
@@ -147,8 +147,11 @@
                 </div>
 
                 <div class="grid">
-                    <div class="grid-item tennis" data-price="20">
+                    <div class="grid-item tennis grayout" data-price="20" data-name="ROMANTIEZER RODRIGUEZ">
                         <div class="item-price">$20</div>
+                        <div class="tool">
+                            <div class="toolttext">ROMANTIEZER RODRIGUEZ</div>
+                        </div>
                     </div>
                     <div class="grid-item tennis " data-price="20">
                         <div class="item-price">$20</div>
@@ -179,11 +182,17 @@
                     </div>
                 </div>
                 <div class="grid">
-                    <div class="grid-item football " data-price="30">
+                    <div class="grid-item football grayout" data-price="30" data-name="JOEL RODRIGUEZ">
                         <div class="item-price">$30</div>
+                        <div class="tool">
+                            <div class="toolttext">JOEL RODRIGUEZ</div>
+                        </div>
                     </div>
-                    <div class="grid-item football " data-price="30">
+                    <div class="grid-item football grayout" data-price="30"  data-name="DARWIN SMITH">
                         <div class="item-price">$30</div>
+                        <div class="tool">
+                            <div class="toolttext">DARWIN SMITH</div>
+                        </div>
                     </div>
                     <div class="grid-item football" data-price="30">
                         <div class="item-price">$30</div>
@@ -211,8 +220,11 @@
                     </div>
                 </div>
                 <div class="grid">
-                    <div class="grid-item basketball " data-price="40">
+                    <div class="grid-item basketball grayout" data-price="40" data-name="DARWIN SMITH">
                         <div class="item-price">$40</div>
+                        <div class="tool">
+                            <div class="toolttext">DARWIN SMITH</div>
+                        </div>
                     </div>
                     <div class="grid-item basketball " data-price="40">
                         <div class="item-price">$40</div>
