--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta
       name="description"
-      content="Juega Como Campeon, a non-profit, bilingual sports academy, supports disadvantaged Dominican Republic kids via programs in sports, English, math & character building."
+content="Juega Como Campeon, a non-profit, bilingual sports academy, supports disadvantaged Dominican Republic kids via programs in Sports, English, Math & Character Building."
+
     />
     <title>
       Juega Como Campeon | Non-Profit Bilingual Sports Academy | Dominican
