--- a/campaign.html
+++ b/campaign.html
@@ -76,26 +76,15 @@
             <h1>GRID CAMPAIGN</h1>
             <hr />
             <article>
-                <h3 id="contribute">¿What is this campaign about?</h3>
+                <h3 id="contribute">LET’S BUILD A BASKETBALL COURT !</h3>
                 <p>
-                    Make a difference with a click! By clicking on the ball below, you'll be making a donation to
-                    support the Bilingual Sports Academy, Juega Como Campeon (JCC), and positively impact the lives of
-                    disadvantaged children in the Dominican Republic. Each click represents an opportunity for these
-                    children to access sports programs, academic support, and character-building activities.
+                    By clicking on one of the balls below, you’ll be making a donation in that amount to support Juega Como Campeon (JCC) and positively impact the lives of underprivileged Dominican youth where we stress educational reinforcement, athletic excellence, gratitude, community service, integrity and personal responsibility.
                     <br>
                     <br>
-                    - We develop sports skills, provide academic support in English and Math, and instill values like
-                    responsibility and community service.
-                    <br>
-                    - At JCC, we use sports to empower children, offering them new opportunities and a promising future.
-                    <br>
-                    - Your contribution doesn't just buy a ball; it opens doors to a better tomorrow for these young
-                    individuals.
+                    We have received the go ahead from the local sports ministry in Puerto Plata that we can build a basketball court on their land to be used daily by our student athletes. We just need the added funds to do it. So please spread the word (and this link) to your groups and invite them to consider JCC to be a part of their philanthropy this Christmas season. 
                     <br>
                     <br>
-                    Join us and be part of the positive change in these children's lives in the Dominican Republic! Your
-                    donation makes a difference!
-                    <br>
+                    And if you feel inclined to give more than the corresponding amount, please write us at juegacomocampeon@gmail.com                    <br>
                     <br>
                     <div style="width: 100%; display: flex; justify-content: center;">
                     <img src="img/picture gallery 10.png" style="width: 95%; border: 3px gray solid;" alt="Bilingual Sports Academy">
