--- a/donate.html
+++ b/donate.html
@@ -1,90 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Donate | Juega Como Campeon | Non-Profit Bilingual Sports Academy</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/qgiv.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>
+      Donate | Juega Como Campeon | Non-Profit Bilingual Sports Academy
+    </title>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/qgiv.css" />
+  </head>
+  <body>
+    <header id="navbar" class="navbar navbar-nav navbar-dark">
+      <nav class="nav-bar navbar-expand-lg container">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarToggler"
+          aria-controls="navbarTogglerDemo01"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-  <header id="navbar" class="navbar navbar-nav navbar-dark">
+        <div class="collapse navbar-collapse" id="navbarToggler">
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                data-toggle="dropdown"
+                role="button"
+                aria-haspopup="true"
+                aria-expanded="false"
+                href="#"
+                >About</a
+              >
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="/#overview">JCC Overview</a>
+                <a class="dropdown-item" href="/#mission">Mission</a>
+                <a class="dropdown-item" href="/#director">Director</a>
+                <a class="dropdown-item" href="/#story">Our Story</a>
+                <a class="dropdown-item" href="/#board">Board Members</a>
+              </div>
+            </li>
 
-    <nav class="nav-bar navbar-expand-lg container">
+            <li class="nav-item">
+              <a class="nav-link" href="/#our-program">Program</a>
+            </li>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+            <li class="nav-item">
+              <a class="nav-link" href="campaign.html">Campaign</a>
+            </li>
 
-      <div class="collapse navbar-collapse" id="navbarToggler">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                data-toggle="dropdown"
+                role="button"
+                aria-haspopup="true"
+                aria-expanded="false"
+                href="#"
+                >Support</a
+              >
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="/#volunteer">Volunteer</a>
+                <a class="dropdown-item" href="/#host-a-drive">Host a Drive</a>
+                <a class="dropdown-item" href="/#contribute">Contribute</a>
+                <a class="dropdown-item" href="/#sponsor">Sponsor</a>
+                <a class="dropdown-item" href="/#employment">Jobs</a>
+              </div>
+            </li>
 
-        <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/#gallery">Media</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/host-a-sports-equiment-drive.html"
+                >Host A Sports Equiment Drive</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/#contact">Contact</a>
+            </li>
+          </ul>
+          <!-- navbar -->
+        </div>
+      </nav>
+    </header>
 
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">About</a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="/#overview">JCC Overview</a>
-              <a class="dropdown-item" href="/#mission">Mission</a>
-              <a class="dropdown-item" href="/#director">Director</a>
-              <a class="dropdown-item" href="/#story">Our Story</a>
-              <a class="dropdown-item" href="/#board">Board Members</a>
-            </div>
-          </li>
+    <main class="container">
+      <h1 class="display-4 mt-3 pt-3">Donate</h1>
+      <p class="">
+        Thank you for considering donating to Juega Como Campeon. Your donation
+        will support JCC in providing expanded life opportunities for
+        disadvantaged Dominican Republic children through programs in Sports,
+        Math & English and Character-building. JCC is a
+        <strong>501(c)(3) organization (EIN: 83-2516699)</strong>, so your
+        donations are also tax-deductible.
+      </p>
+      <!-- data-embed-id="52895" -->
+      <!-- data-embed="https://secure.qgiv.com/for/juecomcamin/embed/1016334/" -->
+      <div
+      data-qgiv-embed="true"
+        class="qgiv-embed-container"
+        data-embed-id="1016334"
+        data-embed="https://secure.qgiv.com/for/gridcampaign/embed/1016334"
+      ></div>
+    </main>
 
-          <li class="nav-item"><a class="nav-link" href="/#our-program">Program</a></li>
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">Support</a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="/#volunteer">Volunteer</a>
-              <a class="dropdown-item" href="/#host-a-drive">Host a Drive</a>
-              <a class="dropdown-item" href="/#contribute">Contribute</a>
-              <a class="dropdown-item" href="/#sponsor">Sponsor</a>
-              <a class="dropdown-item" href="/#employment">Jobs</a>
-            </div>
-          </li>
-          
-          <li class="nav-item"><a class="nav-link" href="/#gallery">Media</a></li>
-          <li class="nav-item"><a class="nav-link" href="/#contact">Contact</a></li>
-
-        </ul>  <!-- navbar -->
-
-      </div>
-
-    </nav>
-
-  </header>
-
-  <div class="container">
-
-    <h1 class="display-4 mt-3 pt-3">Donate</h1>
-    <p class="">Thank you for considering donating to Juega Como Campeon. Your donation will support JCC in providing expanded life opportunities for disadvantaged Dominican Republic children through programs in Sports, Math & English and Character-building. JCC is a <strong>501(c)(3) organization (EIN: 83-2516699)</strong>, so your donations are also tax-deductible.</p>
-    <div class="qgiv-embed-container" data-qgiv-embed="true" data-embed-id="52895" data-embed="https://secure.qgiv.com/for/juecomcamin/embed/52895/" data-width="564"></div>
-  </div>
-
-  <script>
-
-    (function(w, d, s, id){
-        var js, fjs = d.getElementsByTagName(s)[0];
+    <script>
+      (function (w, d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
         js = d.createElement(s);
         js.id = id;
         js.src = "https://secure.qgiv.com/resources/core/js/embed.js";
         fjs.parentNode.insertBefore(js, fjs);
-    }) 
-    (window, document, 'script', 'qgiv-embedjs');
-
-  </script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
-  <script src="js/smoothScroll.js"></script>
-  <script src="js/app.js"></script>
-</body>
+      })(window, document, "script", "qgiv-embedjs");
+    </script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/smoothScroll.js"></script>
+    <script src="js/app.js"></script>
+  </body>
 </html>
