feat: :art: update grayout images

--- a/campaign.html
+++ b/campaign.html
@@ -90,10 +90,8 @@
       <!-- GRID CAMPAIGN -->
 
       <section id="campaign" class="campaign text-justify">
-        <h1>GRID CAMPAIGN</h1>
-        <hr />
         <article>
-          <h3 id="contribute">LET'S BUILD A BASKETBALL COURT !</h3>
+          <h3 class="grid-title">LET'S BUILD A HOOPS COURT !</h3>
           <div>
             <p>
               By clicking on one of the balls below, you'll be making a donation
